# PyOptiX

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README.txt  TODO  __init__.py  configure_docker_compose.py  requirements.txt  setup.py
PyOptix/: __init__.py  config.py  quick_tests.py
PyOptixCppProject/: CMakeLists.txt  main.cpp
PyOptixCppProject/common/: numpy_boost_helpers.cpp  numpy_boost_helpers.h  optix_shared_includes.h
PyOptixCppProject/exports/: core_package.h  enums_package.h  natives_package.h
PyOptixCppProject/objects/: optix_acceleration_wrapper.cpp  optix_acceleration_wrapper.h  optix_buffer_wrapper.cpp  optix_context_wrapper.cpp  optix_context_wrapper.h  optix_destroyable_object_wrapper.cpp  optix_geometry_group_wrapper.cpp  optix_geometry_instance_wrapper.h  optix_geometry_wrapper.h  optix_scoped_object_wrapper.h  optix_texture_sampler_wrapper.cpp  optix_transform_wrapper.cpp  optix_transform_wrapper.h  optix_variable_wrapper.h
driver/: acceleration.cpp  acceleration.h  buffer.cpp  buffer.h  context.cpp  context.h  destroyable.cpp  destroyable.h  geometry.cpp  geometry.h  geometry_group.cpp  geometry_group.h  geometry_instance.cpp  geometry_instance.h  group.cpp  group.h  main.cpp  material.cpp  material.h  program.cpp  program.h  scoped.cpp  scoped.h  selector.cpp  selector.h  shared_includes.h  texture_sampler.cpp  texture_sampler.h  transform.cpp  transform.h  variable.cpp  variable.h
examples/: common.py
pyoptix/: __init__.py  acceleration.py  buffer.py  compiler.py  context.py  entry_point.py  enums.py  geometry.py  group.py  (+11 more)
(+140 files in other folders)
